# MediaBrowser

./: OKUBENİ.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/images/: logo.free
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs  media_manager.rs  thumbnail_manager.rs
src/components/: FolderPickerModal.css  FolderPickerModal.tsx  ImageEditor.css  ImageEditor.tsx  LanguageContext.tsx  MediaBrowser.css  MediaBrowser.tsx  MediaCard.css  MediaCard.tsx  MediaInfoModal.css  MediaInfoModal.tsx  MediaPlayer.css  MediaPlayer.tsx  SettingsPage.css  SettingsPage.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  Tooltip.css  VideoEditor.css  VideoEditor.tsx
src/components/video-converter/: VideoConverter.css  VideoConverter.tsx
src/components/video-editor/: AudioSettingsPanel.tsx  ColorBalancePanel.tsx  ControlSlider.tsx  DraggableDock.tsx  DraggableHistory.tsx  Preview.tsx  Properties.tsx  TextPropertiesPanel.tsx  Timeline.tsx  TransformPanel.tsx  UIComponents.tsx  types.ts
src/hooks/: useHistory.ts
src/locales/: en.json  tr.json
src/utils/: ThumbnailGenerator.ts  WaveformGenerator.ts
