[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-sql = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tiff"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
base64 = "0.22"
natord = "1.0.9"
rand = "0.8"
trash = "5.2.3"
urlencoding = "2.1.3"
tiny_http = "0.12.0"
walkdir = "2.5.0"
tauri-plugin-single-instance = "2"
